--- a/respaper/dashboard/static/dashboard/css/app.css
+++ b/respaper/dashboard/static/dashboard/css/app.css
@@ -3,6 +3,7 @@
   background-color: #ebebe0;
   min-width: 600px;
   min-height: 120px;
+  border-radius: 5px;
 }
 
 #origin2
@@ -10,6 +11,7 @@
   background-color: #ebebe0;
   min-width: 600px;
   min-height: 120px;
+  border-radius: 5px;
 
 }
 
@@ -17,4 +19,5 @@
 {
   background-color: #a5a573;
   min-height: 120px;
+  border-radius: 5px;
 }
